# modmail-plugins

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/workflows/: lint.yaml
ban_appeals/: ban_appeals.py
ban_appeals/utils/: get_or_fetch.py
case_insensitive_snippets/: case_insensitive_snippets.py
close_message/: close_message.py
kick_non_banned/: kick_non_banned.py
mandatory_close_duration/: mandatory_close_duration.py
mdlink/: mdlink.py
ping_manager/: ping_manager.py
ping_manager/utils/: async_tasks.py
reply_cooldown/: reply_cooldown.py
snippet_search/: snippet_search.py
tagging/: tagging.py
