[tool.poetry]
name = "modmail-plugins"
version = "1.0.0"
description = "A collection of modmail plugins for the Python Discord community."
authors = ["Python Discord <info@pythondiscord.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
aiohttp = "==3.7.4.post0"
colorama = "~=0.4.4"  # Doesn't officially support Python 3.9 yet, v0.4.5 will support 3.9
"discord.py" = "==1.7.3"
emoji = "~=1.2.0"
isodate = "~=0.6.0"
motor = "~=2.4.0"
natural = "~=0.2.0"
parsedatetime = "~=2.6"
pymongo = {extras = ["srv"], version = "*"}  # Required by motor
python-dateutil = "~=2.8.1"
python-dotenv = "~=0.18.0"
uvloop = {version = ">=0.15.2", markers = "sys_platform != 'win32'"}

[tool.poetry.dev-dependencies]
flake8 = "~=3.8"
flake8-annotations = "~=2.0"
flake8-bugbear = "~=20.1"
flake8-docstrings = "~=1.4"
flake8-import-order = "~=0.18"
flake8-string-format = "~=0.2"
flake8-tidy-imports = "~=4.0"
flake8-todo = "~=0.7"
pep8-naming = "~=0.9"
pre-commit = "~=2.1"
taskipy = "~=1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
