[tool.poetry]
name = "modmail-plugins"
version = "1.0.0"
description = "A collection of modmail plugins for the Python Discord community."
authors = ["Python Discord <info@pythondiscord.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "3.9.*"
aiohttp = "3.8.1"
colorama = "~=0.4.6"
"discord.py" = "2.0.1"
emoji = "~=1.7.0"
isodate = "~=0.6.0"
motor = "~=2.5.1"
natural = "~=0.2.0"
parsedatetime = "~=2.6"
pymongo = {extras = ["srv"], version = "*"}  # Required by motor
python-dateutil = "~=2.8.1"
python-dotenv = "~=0.20.0"
uvloop = {version = ">=0.15.2", markers = "sys_platform != 'win32'"}
lottie = {version = "0.6.11", extras = ["pdf"]}
requests = "2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
flake8-annotations = "2.9.1"
flake8-bugbear = "22.10.27"
flake8-docstrings = "1.6.0"
flake8-import-order = "0.18.1"
flake8-string-format = "0.3.0"
flake8-tidy-imports = "4.8.0"
flake8-todo = "0.7"
pep8-naming = "0.13.2"
pre-commit = "2.20.0"
taskipy = "1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
